# dreamy

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: experiments.md  frontier_data.md
dreamy/: __init__.py  attribution.py  behavior.py  benchmarks.py  cli.py  directions.py  epo.py  experiment.py  latex.py  model_utils.py  plotting.py  results.py  robustness.py  runners.py  target_generation.py  target_specs.py
dreamy/activations/: probes.py  targets.py
examples/: behavior_evals.json  casing_contrast_pairs.json  contrast_pairs.json  gemma_logit_spec.json  logit_spec.json  text_pool.txt
prompt_suppression/: attribution.py  behavior.py  benchmarks.py  cli.py  directions.py  epo.py  experiment.py  frontier_data.py  plotting.py  robustness.py  runners.py  target_generation.py  target_specs.py
prompt_suppression/activations/: probes.py  targets.py
tests/: test_epo.py  test_research_workflow.py  test_results.py  test_specs_and_cli.py
