[project]
name = "dreamy"
version = "0.0.1"
description = "Gradient-guided prompt optimization utilities for language-model targets."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
  { name = "Dreamy contributors" }
]
dependencies = [
  "accelerate>=0.27",
  "matplotlib>=3.7",
  "numpy>=1.24",
  "scikit-learn>=1.3",
  "torch>=2.1",
  "transformers>=4.40",
]

[project.optional-dependencies]
remote = [
  "boto3>=1.34",
  "datasets>=2.18",
  "modal>=0.64",
  "s3fs>=2024.2",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["dreamy*"]
